<resources>
    <string name="app_name">Taskify Todo-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Taskify - TodoApp</string>
    <string name="nav_header_subtitle">info@lakshithasankalpa.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Welcome</string>
    <string name="menu_home_name">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_faqs">"FAQ's"</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_lakshitha">By : Lakshitha Sankalpa (24011231)</string>
    <string name="add_now">ADD NOW</string>
    <string name="project_name">Taskify - Simple and clean name, suitable for any todo app.</string>
    <string name="view_task">View Task</string>
    <string name="logo_description">taskify logo image : by lakshitha sankalpa</string>
</resources>