<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_house"
            android:title="@string/menu_home_name" />
        <item
            android:id="@+id/nav_todo_main"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/view_task" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_menu_faqs"
            android:title="@string/menu_faqs" />
    </group>
</menu>